# deep-research

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile-aws  README.md  agent.py  auth.py  build-aws.sh  build.sh  current_config.json  db.py  db_sql.py  deploy-aws.sh  deploy.sh  entrypoint.sh  env-aws.sh  env.sh  increment_version.py  langgraph.json  langgraph_snapshot.py  logger_utils.py  model_factory.py  pyproject.toml  research_agent.ipynb  research_agent_cli.py  retry_utils.py  run.py  s3_storage.py  secrets-aws.sh.example  secrets.sh.example  server.py  sync-files-aws.sh  sync-files.sh  utils.py
.deepagents/skills/autoresearch-universal/: SKILL.md
.deepagents/skills/code-generator/: SKILL.md
document/: AWS_DEPLOY.md  AZURE_DEPLOY.md  POSTMAN_README.md  TEST_PROMPTS_VALIDATION_GUIDE.md  UPLOAD_API_GUIDE.md  VERCEL_DEPLOY.md  WIKI_API_GUIDE.md  postman_collection.json  postman_environment.json
research_agent/: __init__.py  prompts.py  tools.py
research_agent/clarification/: __init__.py  contracts.py  middleware.py  policy.py  tool.py  use_case.py
research_agent/utils/: citation_validator.py  cli.py  content_extractors.py  eval_tracking.py  json_utils.py  knowledge_filesystem.py  learning.py  skill_registry.py  text_search.py  verification.py  web_search.py
scripts/: frontend_contract_smoke.ps1
tests/: conftest.py  logger_example.py  test_agent_contracts.py  test_aws_persistence_scripts.py  test_aws_read_only_mode.py  test_citations.py  test_clarification.py  test_document_upload_api.py  test_enhanced_golden_dataset.py  test_eval_tracking.py  test_frontend_api_contract.py  test_generate_quality_metrics.py  test_get_wiki.py  test_golden_dataset_metrics.py  test_google_connectivity.py  test_langgraph_snapshot.py  test_learning.py  test_oauth_setup.py  test_packaging.py  test_prompts_validation.py  test_read_pckl_files.py  test_research_agent_cli.py  test_research_agent_cli_e2e.py  test_research_agent_cli_helpers.py  test_retrieval.py  test_retry_utils.py  test_server.py  test_skill_contracts.py  test_skill_registry.py  test_thread_wiki.py  test_tools.py  test_upload_api.py  test_validation.py  test_verification.py  test_web_search.py  test_write_file.py
thread_wiki/: __init__.py  models.py  progress.py  routes.py  service.py
thread_wiki/templates/: comparison.md  concept.md  entity.md  source.md  synthesis.md
webapp/: __init__.py  auth_helpers.py  config.py  migration.py  model_diagnostics.py  oauth_handler.py  routes.py  utils.py  wiki_hooks.py
(+15 files in other folders)
