[project]
name = "deep-research-example"
version = "0.1.0"
description = "Deep research agent example using deepagents package"
requires-python = ">=3.12,<3.14"
dependencies = [
    "langchain>=1.2.15",
    "langchain-core>=1.2.28",
    "langchain-openai>=1.0.2",
    "langchain-anthropic>=1.0.3",
    "langchain_tavily>=0.2.13",
    "pydantic>=2.0.0",
    "rich>=14.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
    "httpx>=0.28.1",
    "markdownify>=1.2.0",
    "deepagents>=0.5.3",
    "python-dotenv>=1.0.0",
    "langgraph-cli[inmem]>=0.1.55",
    "langchain-google-genai>=3.1.0",
    "pymupdf4llm>=0.3.4",
    "pypdf>=6.9.2",
    "tavily-python>=0.7.23",
    "wincertstore>=0.2.1",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
    "jsonschema>=4.25.1",
    "langchain-ollama>=1.0.1",
    "pyyaml>=6.0.3",
    "pytest>=9.0.2",
    "pandas>=2.0.0",
    "json-repair>=0.59.4",
    "fastapi>=0.124.0",
    "python-multipart>=0.0.20",
    "langgraph-api>=0.8.0",
    "langgraph>=1.1.8",
    "azure-identity>=1.25.3",
    "langgraph-checkpoint-cosmosdb>=0.2.5",
    "pathspec>=1.1.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.2.0",
    "psycopg[binary]>=3.2.0",
    "langchain-community>=0.2.0",
    "faiss-cpu>=1.7.4",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-checkpoint-postgres>=3.1.0",
]

[tool.uv]
override-dependencies = [
    "nbconvert>=7.17.0",  # CVE-2025-53000
    "protobuf>=6.33.5",  # CVE-2026-0994
]

[tool.uv.sources]
# pip download --dest vendor authlib==1.7.2 --no-deps
authlib = { path = "vendor/authlib-1.7.2-py2.py3-none-any.whl" }

[project.optional-dependencies]
dev = [
    "mypy>=1.11.1",
    "ruff>=0.6.1",
    "pytest>=9.0.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["research_agent", "research_agent.*"]

[tool.setuptools.package-data]
"research_agent" = ["py.typed", "skills/*/SKILL.md", "skills/*/scripts/*.yaml"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
